--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="src/assets/team.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Remote Teams Directory is a searchable directory of distributed team members with filters by availability, timezone, and skills"
+        />
         <title>Remote Teams Directory</title>
     </head>
     <body>
